--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Kolab/LDAP/Backend/dirservd version 0.01
+Kolab-LDAP-Backend-dirservd version 0.01
 ========================================
 
 The README is used to introduce the module and provide instructions on
@@ -31,8 +31,10 @@ COPYRIGHT AND LICENCE
 
 Put the correct copyright and licence information here.
 
-Copyright (C) 2003 root
+Copyright (C) 2004 by A. U. Thor
 
 This library is free software; you can redistribute it and/or modify
-it under the same terms as Perl itself. 
+it under the same terms as Perl itself, either Perl version 5.8.3 or,
+at your option, any later version of Perl 5 you may have available.
+
 
